--- a/src/components/Chessboard/Chessboard.scss
+++ b/src/components/Chessboard/Chessboard.scss
@@ -4,10 +4,10 @@ body{
 
     .Chessboard{
         display: grid;
-        grid-template-columns: repeat(8, 10vh);
-        grid-template-rows: repeat(8, 10vh);
-        width: 80vh;
-        height: 80vh;
+        grid-template-columns: repeat(8, 70px);
+        grid-template-rows: repeat(8, 70px);
+        width: 560px;
+        height: 560px;
         background-color: olivedrab;
         
     }
